[gd_scene load_steps=11 format=3 uid="uid://cuoushvus8d4w"]

[ext_resource type="Script" path="res://scripts/explosiveChunk.gd" id="1_532hv"]
[ext_resource type="Texture2D" uid="uid://dsp8uamsftl1x" path="res://sprites/game/ExplosiveChunks.png" id="2_b11ta"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j8vhl"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_lqqm4"]
atlas = ExtResource("2_b11ta")
region = Rect2(0, 0, 6, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8oio"]
atlas = ExtResource("2_b11ta")
region = Rect2(6, 0, 6, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bith"]
atlas = ExtResource("2_b11ta")
region = Rect2(12, 0, 6, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_bocdt"]
atlas = ExtResource("2_b11ta")
region = Rect2(18, 0, 6, 11)

[sub_resource type="SpriteFrames" id="SpriteFrames_ixgxf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqqm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8oio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bith")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bocdt")
}],
"loop": false,
"name": &"Chunks",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_hmnw4"]
colors = PackedColorArray(1, 1, 0, 1, 1, 0.235294, 0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_jhywb"]
radius = 2.0

[node name="Chunk" type="CharacterBody2D"]
texture_filter = 1
material = SubResource("CanvasItemMaterial_j8vhl")
collision_layer = 0
script = ExtResource("1_532hv")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
light_mask = 6
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_ixgxf")
animation = &"Chunks"
offset = Vector2(0, -3)

[node name="Sparks" type="Node2D" parent="."]
light_mask = 6
use_parent_material = true

[node name="Sparks0" type="CPUParticles2D" parent="Sparks"]
light_mask = 6
use_parent_material = true
position = Vector2(0.5, -7)
emitting = false
amount = 50
lifetime = 0.5
preprocess = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
scale_amount_min = 0.75
scale_amount_max = 0.75
color_ramp = SubResource("Gradient_hmnw4")

[node name="Sparks1" type="CPUParticles2D" parent="Sparks"]
light_mask = 6
use_parent_material = true
position = Vector2(1.5, -6)
emitting = false
amount = 50
lifetime = 0.5
preprocess = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
scale_amount_min = 0.75
scale_amount_max = 0.75
color_ramp = SubResource("Gradient_hmnw4")

[node name="Sparks2" type="CPUParticles2D" parent="Sparks"]
light_mask = 6
use_parent_material = true
position = Vector2(-0.5, -8)
emitting = false
amount = 50
lifetime = 0.5
preprocess = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
scale_amount_min = 0.75
scale_amount_max = 0.75
color_ramp = SubResource("Gradient_hmnw4")

[node name="Sparks3" type="CPUParticles2D" parent="Sparks"]
light_mask = 6
use_parent_material = true
position = Vector2(2.5, -7)
emitting = false
amount = 50
lifetime = 0.5
preprocess = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_max = 50.0
scale_amount_min = 0.75
scale_amount_max = 0.75
color_ramp = SubResource("Gradient_hmnw4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_jhywb")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
